--- a/src/components/styles/About.module.css
+++ b/src/components/styles/About.module.css
@@ -1,3 +1,5 @@
+@import "./root.css";
+
 *{
   margin: 0;
   padding: 0;
@@ -7,10 +9,10 @@
 .about{
   z-index: 1;
   position: relative;
+  background-color: var(--dark-bg);
 }
 
 .about__header{
-  background-color: #35363B;
   height: 10vh;
   display: flex;
   align-items: center;
@@ -21,7 +23,7 @@
   font-weight: 300;
   text-align: center;
   font-style: italic;
-  color: #77C7BB;
+  color: var(--gray);
   z-index: inherit;
 }
 
@@ -38,7 +40,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background: #77C7BBa7;
+	background: var(--main-color);
   mix-blend-mode: multiply;
 
 }
@@ -54,7 +56,7 @@
   height: fit-content;
   width: 100%;
 
-  background-color: #35363B;
+  background-color: var(--dark-bg);
   padding-top: 30vw;
   padding-bottom: 1em;
   position: relative;
@@ -67,28 +69,30 @@
 
   width: 80%;
   margin: 0 auto;
-  color: #fff;
+  color: var(--white);
 }
 
 .about__legend{
   font-size: 18px;
-  text-align: center;
   z-index: 10;
+  text-align: justify;
+  line-height: 22px;
+  font-size: 16px;
 
   width: 80%;
   margin: 0 auto;
-  color: #fff;
+  color: var(--white);
 }
 
-.strong{
-  color: #77C7BB;
+.about__legend > .strong{
+  color: var(--main-color);
 }
 
 .home__circleName{
   width: 50vw;
   height: 50vw;
   border-radius: 50%;
-  background-color: #35363B;
+  background-color: var(--dark-bg);
 
   display: flex;
   align-items: center;
@@ -107,31 +111,31 @@
 }
 
 .about__curriculum{
-  background: #77C7BB;
+  background: var(--main-color);
   margin: 3em auto;
-
   width: 70%;
-  padding: 0.5em 1em;
   border-radius: 10px;
-
+  padding: 0.5em 1em;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-color: 1px solid red;
+
 }
 .about__curriculum a {
-  color: #fff;
   text-decoration: none;
+  color: var(--dark-bg);
 }
 
 .about__curriculum:hover{
-  background-color: #77c7bb85;
+  background-color: var(--dark-color);
   cursor: pointer;
 }
 
 @media (min-width:630px){
   .about{
     display: flex;
-    height: 90vh;
+    height: 120vh;
     box-shadow: #00000077 0 0 20px 3px;
     overflow-y: hidden;
   }
@@ -145,34 +149,31 @@
 
   .about__foto{
     width: 30vw;
-    height: 90vh;
+    height: 120vh;
     background-image: url('../../img/personal-picture-desktop.png');
   }
 
   .about__image::before{
-    height: 90vh;
+    height: 120vh;
     width: 30vw;
   }
 
-  .about__content{
-    width: 1000%;
-    height: 90vh;
-    display: flex;
-    justify-content: end;
-    padding: 0;
-    flex-direction: column;
+  .about__content {
+    width: 500%;
   }
 
   .about__legend{
-    text-align: left;
-    margin-left: 3em;
-    width: 65%;
-    font-size: 20px;
+    text-align: justify;
+    margin-left: 2.5em;
+    width: 85%;
+    font-size: 18px;
+    line-height: 120%;
   }
 
   .about__curriculum{
     width: max-content;
     margin-left: 3em;
+    margin-top: 2em;
     font-size: 18px;
   }
 
@@ -181,5 +182,33 @@
     left: -7vw;
     width: 15vw;
     height: 15vw;
+  }
+}
+
+@media (min-width:1200px){
+  .about {
+    max-height: 110vh;
+  }
+
+  .about__content{
+    width: 500%;
+    min-height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    flex-direction: column;
+  }
+
+  .about__legend{
+    text-align: justify;
+    margin: 10em 8em 5em;
+    width: 65%;
+    font-size: 20px;
+    line-height: 150%;
+  }
+
+  .about__curriculum{
+    margin: 0 auto 5em;
   }
 }
