--- a/src/components/styles/Footer.module.css
+++ b/src/components/styles/Footer.module.css
@@ -1,3 +1,5 @@
+@import "./root.css";
+
 *{
   margin: 0;
   padding: 0;
@@ -5,9 +7,13 @@
 }
 
 .footer{
-  background: #77c7bb;
+  background: var(--dark-bg);
+  box-shadow: #00000077 0 0 20px 3px;
+
   display: flex;
-  height: 3em;
+  height: 2em;
   align-items: center;
   justify-content: center;
+
+  color: var(--gray);
 }
