--- a/src/components/styles/Home.module.css
+++ b/src/components/styles/Home.module.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap');
 
+@import "./root.css";
+
 *{
   margin: 0;
   padding: 0;
@@ -21,36 +23,31 @@
   max-width: 100vw;
 
   background-color: rgba(51, 51, 51, 0.5);
-  
+
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .home__innerContainer{
-  color: #fff;
+  color: var(--white);
 }
 
 .home__innerContainer h2{
-  background-color: rgba(51, 51, 51, 0.75);
+  padding: 10px;
   letter-spacing: 0.3em;
 }
 
 .home__innerContainer p {
+  border-top: var(--main-color) 1px solid;
   margin-top: 1em;
+  padding-top: 0.5em;
   text-align: center;
   letter-spacing: 0.1em;
 }
 
 .home__innerName {
-  color: #77C7BB;
-}
-
-.home__innerName:hover{
-  display: inline-block;
-  transform: rotate(360deg);
-  transition:cubic-bezier(0.175, 0.885, 0.32, 1.275) 1000ms;
-  cursor: none;
+  color: var(--main-color);
 }
 
 .home__buttonContainer{
@@ -60,14 +57,14 @@
 }
 
 .home__buttonContainer a{
-  color: #e5e6eb;
+  color: var(--gray);
   text-decoration: none;
-  font-size: 20px;
+  font-size: 20px;;
 }
 
 .home__socialButton{
   border: 2px solid;
-  background-color: #77C7BB77;
+  background-color: var(--dark-color);
   border-radius: 50%;
 
   width: 3em;
@@ -79,8 +76,11 @@
 }
 
 .home__socialButton:hover{
-  transform: scale(1.1);
+  background-color: var(--main-color);
+  transform: scale(1.2);
   transition: linear 50ms;
+  color: var(--dark-bg);
+  border-color: var(--main-color);
 }
 
 @media (min-width:630px){
