--- a/src/components/styles/Navbar.module.css
+++ b/src/components/styles/Navbar.module.css
@@ -1,3 +1,5 @@
+@import "./root.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -12,9 +14,9 @@
   background-color: #3f3f3f;
 
   position: fixed;
-  
+
   left: 0;
-  
+
   transition: linear 300ms;
 
   z-index: 1000;
@@ -24,7 +26,7 @@
   width: 80vw;
   height: 100vh;
   background-color: #3f3f3f;
-  
+
   position: fixed;
   left: -100%;
 
@@ -52,8 +54,8 @@ ul{
 }
 
 .navbar__link:hover{
-  background-color: #35363B;
-  color: #77C7BB;
+  background-color: var(--darker-color);
+  color: var(--main-color);
 }
 
 .navbar__closeButton{
