--- a/src/components/styles/Projects.module.css
+++ b/src/components/styles/Projects.module.css
@@ -1,3 +1,5 @@
+@import "./root.css";
+
 * {
   padding: 0;
   margin: 0;
@@ -5,7 +7,7 @@
 }
 
 .projects{
-  background-color: #3f3f3f;
+  background-color: var(--medium-bg);
   padding-bottom: 3em;
 }
 
@@ -20,12 +22,12 @@
   font-weight: 300;
   text-align: center;
   font-style: italic;
-  color: #77C7BB;
   z-index: inherit;
+
+  color: var(--gray);
 }
 
 .projects__container{
-
   display: flex;
   flex-direction: column;
   align-items: center;
