--- a/src/components/styles/ProjectCard.module.css
+++ b/src/components/styles/ProjectCard.module.css
@@ -17,35 +17,46 @@
   align-items: center;
   gap: 1em;
   padding: 1em;
-
+  height: 12em;
   background: var(--dark-bg);
+
+  border-radius: 0 0 20px 20px;
 }
 
 .projectCard__title{
   font-size: 24px;
   color: var(--main-color);
+  text-decoration: none;
+}
+.projectCard__title:hover {
+  text-decoration: overline;
 }
 
 .projectCard__description{
   color: var(--white);
   text-align: center;
+  align-self: center;
 }
-
-
 
 .projectCard__codeButton{
   padding: 0.5em 1em;
   background-color: var(--medium-bg);
   border: none;
   color: var(--white);
+  font-size: 14px;
+  margin-top: 1em;
+  transition: 0.2s;
+  box-shadow: #19191977 0 0 2px 5px;
   border-radius: 10px;
-  font-size: 16px;
 }
 
 .projectCard__codeButton:hover{
-  background-color: var(--dark-color);
+
+  /*background-color: var(--dark-color);*/
   cursor: pointer;
-  scale: 1.1;
+  transition: 0.1s;
+  box-shadow: #19191977 0 0 1px 2px;
+  color: var(--main-color);
 }
 
 @media (min-width:630px){
@@ -73,5 +84,6 @@
 
     justify-content: space-evenly;
     border-radius: 0 20px 20px 0;
+    height: auto;
   }
 }
