--- a/src/components/styles/root.css
+++ b/src/components/styles/root.css
@@ -1,6 +1,7 @@
 :root {
     --dark-bg: #292929;
     --medium-bg: #383A3D;
+    --soft-bg: #474b51;
     --gray: #CFCFCF;
 
     --main-color: #63C7BE;
